dist/LineScript-win64-20260616/tests/cases/compile_fail/game_bad_types.lsc
main() -> i64 do
  declare g = game_new("128", 128, "bad", false)
  return 0
end
